[package]
name = "playground"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-executor = { path = "../wasm-executor" }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
rayon = "1.3"
simple_logger = "1.6"