[package]
name = "playground"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-executor = { path = "../wasm-executor" }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
rayon = "1.3"
simple_logger = "1.6"

raytracer = { path = "../raytracer" }
rand = { version = "0.7", features = ["small_rng"] }
cgmath = "0.17"
graphics = { path = "../../engine-rs/graphics", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.22", features = ["web-sys"] }
web-sys = "0.3"