[package]
name = "wasm-executor"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Worker",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    "Blob",
    "Url"
]